@@ -3,6 +3,7 @@ AUX openrc.logrotate 71 RMD160 4e7370ca873bd917f16e2b8cfc4bc71accbf2353 SHA1 ef1
 DIST corenetwork-1.0.1.tar.bz2 3519 RMD160 bf746c01d16e04e755843aa308d3c43665a29c8f SHA1 5316d7b286eeaeb0cb2d06e4fecb06911113afa8 SHA256 b241436908158e1dae44fb40db1ec1afeca21ffbbf6a466eeb1d98ac5c63caac
 DIST corenetwork-1.0.2.tar.bz2 3522 RMD160 24b27370c096a0ecd0822360b4e9df3e7a2215e6 SHA1 bcdca9e6323f8d142123601eff7741fe46ca4a11 SHA256 1a965ae4bfaa60cd5481f46933443e4f8a87dcac779f1a317226dde989531f03
 DIST corenetwork-1.0.3.tar.bz2 10690 RMD160 f087dc694caff2adae33dc231fc9c0ff22303c31 SHA1 1af378ae88a1fde1085231ec0edf8baeae5f9b02 SHA256 f06c38b3a4c54f7cade228b372ce4c64456051e8241505125b56c6bba4e0f4a5
+DIST corenetwork-1.0.4.tar.bz2 10691 RMD160 a72ab77f9eb60d9072db75ee94c0bf8d94b6d076 SHA1 ab78ca2e77bec865b47c9aaf227892e24a4bb4bb SHA256 3a32059ec9f8f6c95096390c14714f22d41690c36df761ea2f0e0b4947dae46e
 DIST openrc-0.6.1.tar.bz2 154897 RMD160 d3ee62bdc57b38f2ecfdb2e55d75b5279a4253b7 SHA1 07c27e443b7adfcab02eb3e267f4d228bb580dfc SHA256 c7847254e41b613b76ae570cf786ce8164d637962ad4580d0825b4b62b475e07
 DIST openrc-funtoo-2009.08.01.tar.bz2 147667 RMD160 a6da0be81889be2b0aa5d55e16ed4f72c59ae6e5 SHA1 f22970eb2a8075ccb36cef3a6ec1291d84df04da SHA256 3a27ae1bf03c692da4a5b71d186d3478b41201cce7c7a56aeb65f98eb9c7a908
 DIST openrc-funtoo-2009.11.18.tar.bz2 149199 RMD160 73f8b653a3459d23944ed316cfe7e8f6a6023a0b SHA1 eb4da4f4061cbc1b6b31a72aa2d3ef146587c854 SHA256 825037dc5fba6e67c247934d4d928e2b3e8a5557fa7eeaa9083cf290281fba8e
@@ -13,7 +14,7 @@ EBUILD openrc-0.5.2.ebuild 4715 RMD160 e4827f2754f8288834344a64cc1ccdca6a43d484 
 EBUILD openrc-0.6.0.ebuild 4372 RMD160 0d654ecae63f670ee51d8c33ed0001402fd6d342 SHA1 3ecc16bb8da685befba18a0cf6e551cef460ee38 SHA256 3e9b69b33d818984acc9b079303655dd775cbd9c5c9c079acddffcacb2bd237a
 EBUILD openrc-0.6.1-r1.ebuild 5034 RMD160 d80ffdb187236697ab2c375add995fe3aa1f9f8d SHA1 e9c3067d5ef80fd934bf748a9bc318393304dee2 SHA256 d16f370eb8bb6b5268280f51f6ae24d0542bf4842bb98cc6d0b55590ba087342
 EBUILD openrc-0.6.1-r2.ebuild 5032 RMD160 3cb2f0c38557d92705dad7c10d6f2ebefa60634c SHA1 caaef116cc9adc3e3a967a95c0598f5ac01d8d25 SHA256 26cdf5fd19655f770d432ebcc7c63b24f63b257e05a4ef245f0752b959876ab5
-EBUILD openrc-0.6.1-r3.ebuild 5359 RMD160 909205b60b95e6c8ce46b2e1e6b7ab8c2a40977a SHA1 a9f73a9cf95f395d4077f8e1262cc23695305404 SHA256 9f9352daeba14be9cb002760e14b99a265179c21057b1a4f9b8845077bdf8d2d
+EBUILD openrc-0.6.1-r3.ebuild 5078 RMD160 9d90f699a0db80b8ef2149cdba8904eaf6b980eb SHA1 32c6c15fa810a5e85dedaa54e158ecd596d225e5 SHA256 854026b6da8d03ccd9aa4ee6a2a215534eb950ce0c5c136fd8f98c8736c05fac
 EBUILD openrc-0.6.1.ebuild 5009 RMD160 090a4eb1f792669bfc2bb595ce033d02d29497cb SHA1 05124792f5e5d2c124efc9d0844d073c405da67f SHA256 7f63f060e18143bd2373efc6a71535e54d3aa14448c28cd091dbbeae59ae08f7
-MISC ChangeLog 13602 RMD160 131f91d612cf654f6c1fc367ebd73c7aa5b84014 SHA1 9f9d3b7474459ec1fbc8340bbfff4e68b3e049f4 SHA256 f265b1137cc096d4b37cafeb43c3bfc496099e73101506807329f5ed3e73bebe
+MISC ChangeLog 13822 RMD160 49cbd5031fa7b4df1c6a4b79d6978c4267ea4971 SHA1 015e691463eeb7ea0ae6c003f3ceb10180506431 SHA256 76378e329bac749e69af1362a497019a398298f6ef07a1ae12b6b53dfff3b1a5
 MISC metadata.xml 309 RMD160 af05ed6a2bd3ec66097c304597484905b765661e SHA1 af7c0891711dbc24b07b7546a0b8f79f2637cdf6 SHA256 9f9b210bf70b7eb3d4958976711f8ae33860c310b4c04b8dbcdd3784de54773b
